--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     </div>
   </Header>
   <!-- End Header -->
-
+  
   <!-- Start Row-one  -->
   <section class="row-one">
     <div class="container">
-      <div>
+      <div class="call-to-actions">
         <h1>All your files in one secure location, accessible anywhere.</h1>
         <p class="description">Fylo stores your most important files in one secure location. 
           Access them wherever you need, share and collaborate with friends, 
@@ -40,17 +40,17 @@
           <input type="submit" value="Get Started">
         </form>
       </div>
-      <picture class="illustration-1">
+      <picture class="illustration">
         <img src="images/illustration-1.svg" alt="" class="illustration-1">
       </picture>
     </div>
   </section>
   <!--  End Row-one  -->
-
+  
   <!--  Start Row-Tow  -->
   <section class="row-tow">
     <div class="container">
-      <div>
+      <div class="call-to-actions">
         <h2>Stay productive, wherever you are</h2>
         <p class="description">Never let location be an issue when accessing your files. Fylo has you 
           covered for all of your file storage needs.
@@ -58,9 +58,9 @@
         <p class="description">Securely share files and folders with friends, family and colleagues for 
           live collaboration. No email attachments required!
         </p>
-        <div class="link">
-          <a href="#">See how Fylo works<img src="images/icon-arrow.svg" alt=""></a>
-        </div>
+        
+        <a href="#" class="link">See how Fylo works<img src="images/icon-arrow.svg" alt=""></a>
+        
         <div class="card">
           <img src="images/icon-quotes.svg" alt="" class="quotes">
           <p>Fylo has improved our team productivity by an order of magnitude. Since 
@@ -75,7 +75,7 @@
           </div>
         </div>
       </div>
-      <picture class="illustration-2">
+      <picture class="illustration">
         <img src="images/illustration-2.svg" alt="" class="illustration-2">
       </picture>
     </div>
@@ -102,7 +102,7 @@
   <!-- Start Footer -->
   <footer>
     <div class="container">
-        <img src="./images/logo.svg" alt="" > 
+        <img src="./images/logo-white.svg" alt="" > 
     </div>
     <section class="container">
       <div class="information">
